tests/snapshots/examples_fixtures/patterns__option_match.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/option_match.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:2:5
  |
2 |     print("=== Option and Match Tests ===");
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:5:5
  |
5 |     print("/n1. Basic Option types:");
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:8:5
  |
8 |     print(none_val);
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:9:5
  |
9 |     print(some_val);
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:12:5
   |
12 |     print("/n2. Match with literals:");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:20:5
   |
20 |     print(result);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:23:5
   |
23 |     print("/n3. Match with Option patterns:");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


Warning: Redundant Match Arm

this arm is unreachable — earlier arms already cover it

  examples/patterns/option_match.flx:28:9
   |
28 |         _ -> "unreachable",
   |         ^^^^^^^^^^^^^^^^^^


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:30:5
   |
30 |     print(msg);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:33:5
   |
33 |     print("/n4. Array indexing:");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:37:5
   |
37 |     print(valid);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:38:5
   |
38 |     print(invalid);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:41:5
   |
41 |     print("/n5. Hash indexing:");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:45:5
   |
45 |     print(found);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:46:5
   |
46 |     print(not_found);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:49:5
   |
49 |     print("/n6. Multiple patterns:");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:57:5
   |
57 |     print(desc);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.


error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/option_match.flx:59:5
   |
59 |     print("/n=== All tests completed ===");
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.

Found 17 errors and 1 warning.
== stdout ==
<not executed>
